we introduced the mock for the error case